--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+
+body, html, #root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url('./assets/images/Background.png') no-repeat center center fixed; 
+  background-size: cover;
+  /* background: rgb(102,39,143);
+  background: radial-gradient(circle, rgba(102,39,143,1) 0%, rgba(77,9,121,1) 40%, rgba(0,212,255,1) 100%); */
+}
+
+.coverflow-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
