--- a/src/App.css
+++ b/src/App.css
@@ -43,24 +43,40 @@ body, html, #root {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
-  background: url('./assets/images/Background.png') no-repeat center center fixed; 
+  background: url('./assets/images/DarkenedBackground.png') no-repeat center center fixed; 
   background-size: cover;
   /* background: rgb(102,39,143);
   background: radial-gradient(circle, rgba(102,39,143,1) 0%, rgba(77,9,121,1) 40%, rgba(0,212,255,1) 100%); */
 }
 
 .coverflow-container {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+
+
+}
+
+.project-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 
+.project-title {
+  font-size: 2rem;
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  text-align: center;
+  margin-bottom: 10px; /* Adjust as needed for spacing */
+}
 
 div {
   display: flex;
@@ -68,7 +84,7 @@ div {
   align-items: center;
   height: 100%;
   width: 100%;
-}
+} 
 
 img {
   max-width: 100%;
