--- a/src/assets/css/ProjectDetail.css
+++ b/src/assets/css/ProjectDetail.css
@@ -5,19 +5,23 @@
   
   .carousel-container {
     flex: 1;
+    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
-    padding: 20px;
-    max-width: 200px; /* Adjust the max-width to make the carousel smaller */
-  }
+    backdrop-filter: blur(5px);
+    max-width: 250px; /* Adjust the max-width to make the carousel smaller */
+    /* border: solid;
+  border-right-color: #f0f0f0;
+  border-left: none; */
+}
   
   .carousel-item {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Add shadow to the active item */
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0;
+    margin: 15px 0;
   }
   
   .carousel-item img {
@@ -33,7 +37,7 @@
   
   .project-info-container {
     flex: 2;
-    padding: 20px;
+  
   }
   
   .project-info-container h2 {
@@ -49,6 +53,7 @@
   
   /* Arrow button styles */
   .arrow {
+    
     position: absolute;
     background-color: transparent;
     border: none;
