--- a/src/assets/css/ProjectDetail.css
+++ b/src/assets/css/ProjectDetail.css
@@ -11,31 +11,37 @@
   background: url('../images/Background.png') no-repeat center center fixed;
   background-size: cover;
   color: var(--primary-white);
-  overflow: hidden; /* Prevent horizontal scrolling */
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
+
 .carousel-container {
-  flex: 1;
+  flex: 3;
   padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(5px);
-  max-width: 250px;
+  max-width: 300px;
   box-sizing: border-box;
 }
 
-.project-info-container {
+.project-info-container { 
   flex: 2;
   padding: 20px;
-  overflow-y: auto;
+  overflow-y: auto; /* Ensure vertical scrolling within the container */
   display: flex;
   flex-direction: column;
-  gap: 3px; /* Reduce gap between sections */
+  gap: 5px;
   box-sizing: border-box;
+  width: 100%; /* Ensure it uses full width */
+  max-width: 100%;
 }
 
+
+
 .project-header {
+  margin-top: 500px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,6 +57,7 @@
   max-width: 500px;
   height: auto;
   margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .project-details {
@@ -100,13 +107,13 @@
 .project-prototype-section,
 .project-gallery,
 .project-git-section {
-  margin-bottom: 3px; /* Reduce margin between sections */
+  margin-bottom: 5px; /* Less margin between sections */
 }
 
 .section-title {
   margin-right: 50px;
   font-size: 1.5rem;
-  margin-bottom: 3px; /* Reduce margin below the section title */
+  margin-bottom: 5px;
   color: var(--primary-white); /* Secondary blue color */
 }
 
@@ -122,14 +129,17 @@
 
 .gallery-images {
   display: flex;
-  gap: 10px;
+  gap: 20px; /* Increased gap between images */
   overflow-x: auto;
-  padding: 10px 0;
+  padding: 20px 0; /* Increased padding for better spacing */
+  justify-content: flex-start; /* Ensure images are aligned to the start */
+  flex-wrap: nowrap; /* Prevent wrapping */
+  width: auto; /* Allow gallery to extend beyond parent width if needed */
 }
 
 .gallery-thumbnail {
-  width: 100px;
-  height: 100px;
+  width: 150px; /* Significantly increased width */
+  height: 150px; /* Significantly increased height */
   object-fit: cover;
   cursor: pointer;
   border: 2px solid transparent;
@@ -139,6 +149,7 @@
 .gallery-thumbnail:hover {
   border: 2px solid var(--secondary-blue); /* Hover color */
 }
+
 
 .gallery-modal {
   position: fixed;
@@ -180,4 +191,19 @@
 
 .gallery-next {
   right: 20px;
+}
+
+.back-arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 30px;
+  color: var(--primary-white);
+  cursor: pointer;
+  z-index: 1000; /* Ensure it's on top of other elements */
+}
+
+
+.back-button:hover {
+  background: var(--secondary-orange);
 }
