--- a/src/assets/css/CoverflowComponent.css
+++ b/src/assets/css/CoverflowComponent.css
@@ -10,8 +10,22 @@
   transform: scale(0.8); /* Decrease the size of inactive items */
 }
 
+html, body {
+  -webkit-overflow-scrolling: touch; /* Enable momentum scrolling in iOS */
+  touch-action: pan-y; /* Prevent horizontal scrolling */
+}
+
+.custom-project-container {
+  touch-action: pan-y; /* Ensure touch actions are handled properly */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* Remove tap highlight on touch devices */
+}
+
 .project-title{
+  box-shadow: none;
+  border: none;
   color: rgb(255, 255, 255);
+  touch-action: pan-y; /* Ensure touch actions are handled properly */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* Remove tap highlight on touch devices */
 }
 :root {
   --primary-black: #1d1d1b;
@@ -95,3 +109,13 @@
 .coverflow__figure__3bk_C.active {
   transform: scale(1.5) !important; /* Make the active element bigger */
 }
+
+
+/* Add this CSS to your stylesheet */
+@media (hover: hover) and (pointer: fine) {
+  .your-swipeable-container-class {
+    pointer-events: none;
+  }
+}
+
+
