--- a/src/assets/css/ProjectDetail.css
+++ b/src/assets/css/ProjectDetail.css
@@ -39,9 +39,14 @@
 }
 
 
+.white-text {
+  color: var(--primary-white);
+}
+
 
 .project-header {
-  margin-top: 500px;
+   margin-top: 300px; 
+  /* Change depending on resolution */
   display: flex;
   align-items: center;
   justify-content: space-between;
