--- a/src/assets/css/VerticalCarouselComponent.css
+++ b/src/assets/css/VerticalCarouselComponent.css
@@ -1,9 +1,12 @@
 .vertical-carousel {
   position: relative; /* Position the carousel relative to its container */
   width: 100%; /* Full width */
-  height: 90vh; /* Full viewport height */
-  overflow: hidden; /* Hide overflow to prevent scrolling outside the container */
+  height: 100vh; /* Full viewport height */
   
+}
+
+.carousel-wrapper {
+  position: relative;
 }
 
 .carousel-container {
@@ -15,6 +18,7 @@
   scrollbar-width: none; /* Hide scrollbar for Firefox */
   padding-top: 60px; /* Adjusted for button space */
   padding-bottom: 60px; /* Adjusted for button space */
+  
 }
 
 .carousel-container::-webkit-scrollbar {
@@ -23,7 +27,7 @@
 
 .carousel-item {
   flex: 0 0 150px; /* Fixed height for each item */
-  width: 80%; /* Fixed width for each item */
+  max-width: 80%; /* Fixed width for each item */
   display: flex; /* Flexbox for content alignment */
   flex-direction: column; /* Align content vertically */
   align-items: center; /* Center align items */
@@ -41,16 +45,16 @@
 }
 
 .carousel-item.active {
-  transform: scale(1.2); /* Scale up the active item */
+  transform: scale(1.3); /* Scale up the active item */
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Add shadow to the active item */
   z-index: 2; /* Ensure the active item is on top */
 }
 
 .carousel-item img {
   width: 100%; /* Ensure images fit within the item */
-  height: 150px; /* Fixed height for images */
+  height: 80px; /* Fixed height for images */
   object-fit: cover; /* Cover the space without distorting */
-  margin-bottom: 10px; /* Space between image and text */
+  margin-bottom: 5px; /* Space between image and text */
 }
 
 .project-title-vertical {
@@ -66,10 +70,10 @@
 }
 
 .carousel-button {
-  position: absolute; /* Position the buttons absolutely */
+  position: fixed; /* Position the buttons fixed */
   left: 50%; /* Center horizontally */
   transform: translateX(-50%); /* Center align */
-  background-color: #007bff; /* Button background color */
+  background-color: #6200EE; /* Button background color */
   border: none; /* Remove border */
   color: white; /* Text color */
   padding: 10px 20px; /* Padding inside buttons */
@@ -83,15 +87,23 @@
 }
 
 .carousel-button.top {
-  top: 3%;
-    left: 50%;
-    transform: translateX(-50%);
+  top: 25px; /* Adjust as needed */
 }
 
 .carousel-button.bottom {
-  bottom: 3%;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 25px; /* Adjust as needed */
+}
+
+.back-button {
+  position: fixed;
+  top: 25px;
+  left: 20px;
+  font-size: 40px;
+  margin-right: 15px;
+  background-color: #6200EE;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  z-index: 1000; /* Ensure it's on top of other elements */
 }
 
 .carousel-button:hover {
@@ -127,6 +139,24 @@
 }
 
 .carousel-item {
-  animation: fadeIn 0.5s ease-in-out;
+  animation: fadeIn 0.9s ease-in-out;
+ 
 }
+
+
+.vertical-carousel-container {
+  overflow: hidden;
+}
+
+.vertical-carousel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+}
+
+
+
 
